--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -71,3 +71,16 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+.animate-slide {
+  animation: slide 15s slide linear infinite;
+}
+
+@keyframes slide {
+  from {
+    transform: translateX(0);
+  }
+  to{
+    transform: translateX(-100%);
+  }
+}
